Render with particle systems crash #46194

Closed
opened 2015-09-21 17:06:44 +02:00 by Diego Gangl · 9 comments

Blender: 2.76 RC1 (built from master at 0dbde559cf)
OS: Arch Linux 4.1.6 / Nvidia 352.41

Blender crashes at a random frame when rendering this blend file. I'm not sure if it's the animated emitter, or the multiple particle systems, or the force fields. Or all of them together.

Here's the backtrace:

# backtrace
bin/blender(BLI_system_backtrace+0x1d) [0x12469fd]
bin/blender() [0x943f1c]
/usr/lib/libc.so.6(+0x33680) [0x7ff540784680]
bin/blender(RE_addRenderInstance+0x21e) [0xcbfb3e]
bin/blender() [0xc81d0d]
bin/blender(RE_Database_FromScene+0x1c0) [0xc82ac0]
bin/blender() [0xc993e2]
bin/blender() [0xc998de]
bin/blender() [0xc9c96a]
bin/blender(RE_BlenderAnim+0x383) [0xc9d853]
bin/blender() [0xbe5319]
bin/blender() [0x953c1a]
/usr/lib/libpthread.so.0(+0x74a4) [0x7ff540d004a4]
/usr/lib/libc.so.6(clone+0x6d) [0x7ff54083a13d]

Test blend:
bug_test.blend

Blender: 2.76 RC1 (built from master at 0dbde559cfff511e) OS: Arch Linux 4.1.6 / Nvidia 352.41 Blender crashes at a random frame when rendering this blend file. I'm not sure if it's the animated emitter, or the multiple particle systems, or the force fields. Or all of them together. Here's the backtrace: ``` # backtrace bin/blender(BLI_system_backtrace+0x1d) [0x12469fd] bin/blender() [0x943f1c] /usr/lib/libc.so.6(+0x33680) [0x7ff540784680] bin/blender(RE_addRenderInstance+0x21e) [0xcbfb3e] bin/blender() [0xc81d0d] bin/blender(RE_Database_FromScene+0x1c0) [0xc82ac0] bin/blender() [0xc993e2] bin/blender() [0xc998de] bin/blender() [0xc9c96a] bin/blender(RE_BlenderAnim+0x383) [0xc9d853] bin/blender() [0xbe5319] bin/blender() [0x953c1a] /usr/lib/libpthread.so.0(+0x74a4) [0x7ff540d004a4] /usr/lib/libc.so.6(clone+0x6d) [0x7ff54083a13d] ``` Test blend: [bug_test.blend](https://archive.blender.org/developer/F236571/bug_test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Januz

Added subscriber: @Januz
Author

Just found out disabling one of the particle systems makes it work.

Just found out disabling one of the particle systems makes it work.
Member

Added subscribers: @Sergey, @Blendify

Added subscribers: @Sergey, @Blendify
Member

Can confirm the crash maybe @Sergey will have some incite?

Can confirm the crash maybe @Sergey will have some incite?

Added subscriber: @zeauro

Added subscriber: @zeauro

ubuntu14.04 64 bits hash b87cb9a
I managed to reproduce it from scratch.
Here a simpler blend.
amount_part.blend

Dupli particles (object or group visualization) are crashing blender when they are used by particle system in second slot with an amount higher than amount of first slot.
Crash does not seem to occur on random frames. It occurs in an interval that ends at end frame of emission and after end of emission.
And it seems to be proportionnal to amounts difference.

Attached blend only crashes at frame 200 and after. It will crash at frame 21 if amount of second slot is increased at 10000.
No crash if amount of first particle system is increased at 1001.

Nobody mentionned it but crash is specific to blender internal. No crash with Cycles.

ubuntu14.04 64 bits hash b87cb9a I managed to reproduce it from scratch. Here a simpler blend. [amount_part.blend](https://archive.blender.org/developer/F236886/amount_part.blend) Dupli particles (object or group visualization) are crashing blender when they are used by particle system in second slot with an amount higher than amount of first slot. Crash does not seem to occur on random frames. It occurs in an interval that ends at end frame of emission and after end of emission. And it seems to be proportionnal to amounts difference. Attached blend only crashes at frame 200 and after. It will crash at frame 21 if amount of second slot is increased at 10000. No crash if amount of first particle system is increased at 1001. Nobody mentionned it but crash is specific to blender internal. No crash with Cycles.

This issue was referenced by c6049d1371

This issue was referenced by c6049d137140e9e916fa206c4b3cd2d6a0d14154

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46194
No description provided.