Fix T46194: Crash rendering particles

Off by one error in 38940662